--- a/.github/workflows/scheduled_data_collection.yml
+++ b/.github/workflows/scheduled_data_collection.yml
@@ -18,11 +18,15 @@ jobs:
         fetch-depth: 0
         sparse-checkout: false  # Ensure sparse-checkout is disabled if not required
 
-    # Step 2: List all files in the repository for debugging
-    - name: List files in the directory after checkout
+    # Step 2: Debug environment
+    - name: Debug Environment
       run: |
-        echo "Listing files in /home/runner/work/web3Jobs/web3Jobs:"
-        ls -la /home/runner/work/web3Jobs/web3Jobs
+        echo "GitHub Workspace: ${{ github.workspace }}"
+        echo "Current directory: $(pwd)"
+        echo "Python version: $(python --version)"
+        echo "Repository contents:"
+        find ${{ github.workspace }} -type f -name "*.py" | sort
+        find ${{ github.workspace }} -type f -name "requirements.txt" | sort
 
     # Step 3: Set up Python
     - name: Set up Python
@@ -30,48 +34,19 @@ jobs:
       with:
         python-version: '3.11'
 
-    # Step 4: Install uv (modern pip alternative)
-    - name: Install uv (modern pip alternative)
+    # Step 4: Install dependencies with pip
+    - name: Install Python dependencies
       run: |
-        echo "Installing uv..."
-        curl -LsSf https://astral.sh/uv/install.sh | sh
-        echo "::add-path::${HOME}/.local/bin"  # Add to PATH
-        uv --version  # Verify that uv is installed successfully
-        which uv  # Check if uv is found in the PATH
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
 
-    # Step 5: Create and activate virtual environment with python -m venv, then install dependencies
-    - name: Create and activate virtual environment with python -m venv, then install dependencies
+    # Step 5: Set file permissions for scripts
+    - name: Set file permissions
       run: |
-        echo "Creating virtual environment with python -m venv..."
-        python3 -m venv venv
-        
-        # List the contents of the 'venv' directory to verify it was created successfully
-        echo "Listing contents of the 'venv' directory after creation:"
-        ls -la venv
+        chmod +x ${{ github.workspace }}/run_all_tasks.py
+        echo "File permissions updated"
 
-        # Activate the virtual environment
-        echo "Activating the virtual environment..."
-        source venv/bin/activate
-
-        # Verify the Python and pip from the virtual environment
-        echo "Verifying Python interpreter from virtual environment:"
-        which python
-        python --version
-        echo "Verifying pip from virtual environment:"
-        which pip
-        pip --version
-
-        # Install dependencies using the pip from the virtual environment
-        echo "Attempting to install dependencies from ${{ github.workspace }}/requirements.txt ..."
-        if [ -f "${{ github.workspace }}/requirements.txt" ]; then
-          pip install -r ${{ github.workspace }}/requirements.txt  # Explicitly use pip from the activated environment
-        else
-          echo "Error: requirements.txt not found!"
-          exit 1
-        fi
-        echo "Dependency installation step finished."
-
-    # Step 6: Run your master Python script that orchestrates other scripts using absolute path
+    # Step 6: Run the master task script
     - name: Run the master task script
       env:
         POSTGRES_URI: ${{ secrets.POSTGRES_URI }}
@@ -83,30 +58,5 @@ jobs:
         WEB3_CAREER_API_KEY: ${{ secrets.WEB3_CAREER_API_KEY }}
       run: |
         echo "Running script with verbose logging..."
-        source venv/bin/activate
-        python3 /home/runner/work/web3Jobs/web3Jobs/run_all_tasks.py --verbose  # Add verbose flags or logging to the script
+        python3 /home/runner/work/web3Jobs/web3Jobs/run_all_tasks.py
         echo "Master script execution finished."
-
-    # Step 7: Post Set up Python tasks (this will run regardless of any previous failures)
-    - name: Post Set up Python
-      if: always()  # Ensures this step runs regardless of previous failures
-      run: |
-        echo "Post Python setup tasks here..."
-        # You can add any cleanup or additional tasks that should always run
-
-    # Step 8: Debug Environment Variables
-    - name: Debug Environment Variables
-      run: |
-        echo "POSTGRES_URI: $POSTGRES_URI"
-        echo "MONGO_URI: $MONGO_URI"
-        echo "REDDIT_CLIENT_ID: $REDDIT_CLIENT_ID"
-        echo "REDDIT_CLIENT_SECRET: $REDDIT_CLIENT_SECRET"
-        echo "REDDIT_USER_AGENT: $REDDIT_USER_AGENT"
-        echo "TWITTER_BEARER_TOKEN: $TWITTER_BEARER_TOKEN"
-        echo "WEB3_CAREER_API_KEY: $WEB3_CAREER_API_KEY"
-
-    # Step 9: Collect And Process (Ensure this step exists)
-    - name: collect_and_process
-      run: |
-        set -x  # Enables debug output
-        python3 /home/runner/work/web3Jobs/web3Jobs/collect_and_process.py || echo "::error::Script failed: $(cat error.log)"
