--- a/.github/workflows/scheduled_data_collection.yml
+++ b/.github/workflows/scheduled_data_collection.yml
@@ -2,53 +2,62 @@ name: Scheduled Data Collection
 
 on:
   schedule:
-    - cron: '0 */6 * * *'
+    - cron: "0 0 * * *"  # Runs at midnight UTC every day
   workflow_dispatch:
 
 jobs:
   data-collection:
     runs-on: ubuntu-latest
-
+    
     steps:
-      - name: Check out repository code
-        uses: actions/checkout@v4
+    # Step 1: Check out repository code
+    - name: Check out repository code
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
 
-      - name: Debug Repository Files
-        run: |
-          echo "GitHub Workspace: ${{ github.workspace }}"
-          echo "Current directory: $(pwd)"
-          echo "Repository contents:"
-          find ${{ github.workspace }} -type f -name "*.py" | sort
-          find ${{ github.workspace }} -type f -name "requirements.txt" | sort
+    # Step 2: Set up Python environment
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.11'  # Adjust the Python version if needed
 
-      - name: Set executable permissions
-        run: |
-          chmod +x ${{ github.workspace }}/run_all_tasks.py
-          chmod +x ${{ github.workspace }}/collect_web3career.py
-          chmod +x ${{ github.workspace }}/scrape_cryptojobslist.py
-          chmod +x ${{ github.workspace }}/collect_reddit.py
-          chmod +x ${{ github.workspace }}/collect_twitter.py
-          chmod +x ${{ github.workspace }}/process_sentiment.py
+    # Step 3: Install Python dependencies
+    - name: Install Python dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r ${{ github.workspace }}/requirements.txt
 
-      - name: Add uv to PATH
-        run: echo "::add-path::${HOME}/.local/bin"
+    # Step 4: Add debug information
+    - name: Debug Environment Variables
+      run: |
+        echo "GitHub Workspace: ${{ github.workspace }}"
+        echo "Current directory: $(pwd)"
+        echo "Python version: $(python --version)"
+        echo "Repository contents:"
+        find ${{ github.workspace }} -type f -name "*.py" | sort
+        find ${{ github.workspace }} -type f -name "requirements.txt" | sort
 
-      - name: Verify uv installation
-        run: which uv
+    # Step 5: Set file permissions (make sure the script is executable)
+    - name: Set file permissions
+      run: |
+        chmod +x ${{ github.workspace }}/run_all_tasks.py
+        echo "File permissions updated"
 
-      - name: Install Python dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r ${{ github.workspace }}/requirements.txt
+    # Step 6: Run the master task script
+    - name: Run the master task script
+      run: |
+        python ${{ github.workspace }}/run_all_tasks.py
 
-      - name: Run Data Collection Tasks
-        run: |
-          echo "Running run_all_tasks.py..."
-          python ${{ github.workspace }}/run_all_tasks.py
+    # Step 7: Post job cleanup (optional)
+    - name: Post job cleanup
+      run: |
+        echo "Cleaning up after job"
+        # Optional: Add any clean-up commands here
 
-      - name: Debug Environment Variables
-        run: |
-          echo "POSTGRES_URI: ${{ secrets.POSTGRES_URI }}"
-          echo "MONGO_URI: ${{ secrets.MONGO_URI }}"
-          echo "REDDIT_CLIENT_ID: ${{ secrets.REDDIT_CLIENT_ID }}"
-          echo "TWITTER_BEARER_TOKEN: ${{ secrets.TWITTER_BEARER_TOKEN }}"
+    # Step 8: Upload artifacts (optional, for debugging)
+    - name: Upload logs as artifacts
+      uses: actions/upload-artifact@v2
+      with:
+        name: logs
+        path: ${{ github.workspace }}/logs
