--- a/.github/workflows/scheduled_data_collection.yml
+++ b/.github/workflows/scheduled_data_collection.yml
@@ -2,51 +2,116 @@ name: Scheduled Data Collection
 
 on:
   schedule:
-    - cron: '0 0 * * *'  # Adjust the cron expression to your required schedule
+    # Runs every 6 hours
+    - cron: '0 */6 * * *'
+  # Allows manual triggering
   workflow_dispatch:
 
 jobs:
-  data-collection:
-    runs-on: ubuntu-latest  # Use ubuntu-latest runner
+  collect_and_process:
+    runs-on: ubuntu-latest
+    timeout-minutes: 60
+
     steps:
-      - name: Check out repository code
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0  # Fetch all commits (useful for debugging)
+    # Step 1: Checkout repository code
+    - name: Check out repository code
+      uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.11'  # Ensure using the correct Python version
+    # Step 2: Debug environment
+    - name: Debug Repository Files
+      run: |
+        echo "GitHub Workspace: ${{ github.workspace }}"
+        echo "Current directory: $(pwd)"
+        echo "Repository contents:"
+        ls -la
+        echo "Python files:"
+        find . -name "*.py" | sort
+        echo "Requirements file:"
+        find . -name "requirements.txt" | sort
+        if [ -f "requirements.txt" ]; then
+          echo "Requirements file content:"
+          cat requirements.txt
+        else
+          echo "WARNING: requirements.txt not found"
+        fi
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt  # Install dependencies from requirements.txt
+    # Step 3: Set up Python
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.11'
 
-      - name: Debug Environment
-        run: |
-          echo "GitHub Workspace: ${{ github.workspace }}"
-          echo "Current directory: $(pwd) "
-          echo "Python version: $(python --version)"
-          echo "Repository contents:"
-          find ${{ github.workspace }} -type f -name "*.py" | sort
-          find ${{ github.workspace }} -type f -name "requirements.txt" | sort
+    # Step 4: Install dependencies using standard pip
+    - name: Install Python dependencies
+      run: |
+        python -m pip install --upgrade pip
+        if [ -f requirements.txt ]; then
+          pip install -r requirements.txt
+          echo "Dependencies installed successfully"
+        else
+          echo "WARNING: requirements.txt not found"
+          exit 1
+        fi
 
-      - name: Run data collection script
-        run: |
-          chmod +x run_all_tasks.py  # Ensure the main script is executable
-          python run_all_tasks.py || echo "::error::Script failed: $(cat error.log)"
+    # Step 5: Test dependency imports
+    - name: Test Script Import
+      run: |
+        echo "Testing script imports..."
+        python -c "
+import sys
+print(f'Python version: {sys.version}')
+try:
+    import requests
+    print('✓ requests module available')
+except ImportError as e:
+    print(f'✗ ERROR: {e}')
 
-      - name: Upload logs as artifacts
-        uses: actions/upload-artifact@v2
-        with:
-          name: logs
-          path: ${{ github.workspace }}/logs  # Adjust the path to where your logs are stored
+try:
+    import pandas
+    print('✓ pandas module available')
+except ImportError as e:
+    print(f'✗ ERROR: {e}')
 
-      - name: Post job cleanup
-        run: |
-          echo "Post job cleanup - uploading logs and diagnostics"
-          # Additional cleanup logic, e.g., removing temp files, uploading diagnostics
-          # Example of how to upload diagnostic logs after a failure (adjust as needed)
-          upload-artifacts diagnostic-logs /path/to/logs
+try:
+    import pymongo
+    print('✓ pymongo module available')
+except ImportError as e:
+    print(f'✗ ERROR: {e}')
+"
+
+    # Step 6: Set file permissions
+    - name: Set executable permissions
+      run: |
+        chmod +x run_all_tasks.py
+        chmod +x collect_web3career.py
+        chmod +x scrape_cryptojobslist.py
+        chmod +x collect_reddit.py
+        chmod +x collect_twitter.py
+        chmod +x process_sentiment.py
+        echo "File permissions updated"
+
+    # Step 7: Debug Environment Variables
+    - name: Debug Environment Variables
+      run: |
+        echo "Checking environment variables (masked for security)"
+        echo "POSTGRES_URI: ${{ secrets.POSTGRES_URI != '' && 'SET' || 'NOT SET' }}"
+        echo "MONGO_URI: ${{ secrets.MONGO_URI != '' && 'SET' || 'NOT SET' }}"
+        echo "REDDIT_CLIENT_ID: ${{ secrets.REDDIT_CLIENT_ID != '' && 'SET' || 'NOT SET' }}"
+        echo "REDDIT_CLIENT_SECRET: ${{ secrets.REDDIT_CLIENT_SECRET != '' && 'SET' || 'NOT SET' }}"
+        echo "REDDIT_USER_AGENT: ${{ secrets.REDDIT_USER_AGENT != '' && 'SET' || 'NOT SET' }}"
+        echo "TWITTER_BEARER_TOKEN: ${{ secrets.TWITTER_BEARER_TOKEN != '' && 'SET' || 'NOT SET' }}"
+        echo "WEB3_CAREER_API_KEY: ${{ secrets.WEB3_CAREER_API_KEY != '' && 'SET' || 'NOT SET' }}"
+
+    # Step 8: Run the master task script
+    - name: Run Data Collection Tasks
+      env:
+        POSTGRES_URI: ${{ secrets.POSTGRES_URI }}
+        MONGO_URI: ${{ secrets.MONGO_URI }}
+        REDDIT_CLIENT_ID: ${{ secrets.REDDIT_CLIENT_ID }}
+        REDDIT_CLIENT_SECRET: ${{ secrets.REDDIT_CLIENT_SECRET }}
+        REDDIT_USER_AGENT: ${{ secrets.REDDIT_USER_AGENT }}
+        TWITTER_BEARER_TOKEN: ${{ secrets.TWITTER_BEARER_TOKEN }}
+        WEB3_CAREER_API_KEY: ${{ secrets.WEB3_CAREER_API_KEY }}
+      run: |
+        echo "Running run_all_tasks.py..."
+        python run_all_tasks.py
