--- a/.github/workflows/scheduled_data_collection.yml
+++ b/.github/workflows/scheduled_data_collection.yml
@@ -1,65 +1,59 @@
 name: Scheduled Data Collection
 
 on:
-  # Triggers the workflow on a schedule
   schedule:
     # Runs every 6 hours (at 00:00, 06:00, 12:00, 18:00 UTC)
-    # Use https://crontab.guru/ to generate cron schedules
     - cron: '0 */6 * * *'
-
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 jobs:
   collect_and_process:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    # Maximum time the job is allowed to run (e.g., 60 minutes)
     timeout-minutes: 60
 
-    # A sequence of tasks called "steps" will be executed
     steps:
-    # Step 1: Check out your repository code under $GITHUB_WORKSPACE, so your job can access it
+    # Step 1: Checkout code
     - name: Check out repository code
       uses: actions/checkout@v4
 
-    # Step 2: Debug - List files to confirm checkout location and requirements.txt presence
+    # Step 2: List files (Debug)
     - name: Debug Repository Files
       run: |
         echo "GitHub Workspace: ${{ github.workspace }}"
         echo "Current directory: $(pwd)"
         echo "Repository contents:"
-        ls -la ${{ github.workspace }} # List files in the checkout root
+        ls -la ${{ github.workspace }}
         echo "Looking for requirements.txt at root:"
         find ${{ github.workspace }} -maxdepth 1 -name "requirements.txt"
 
-    # Step 3: Set up Python environment
+    # Step 3: Set up Python
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
-        python-version: '3.11' # Specify desired Python version
+        python-version: '3.11'
 
-    # Step 4: Install 'uv' - A fast Python package installer
+    # Step 4: Install uv
     - name: Install uv (modern pip alternative)
       run: |
         echo "Installing uv..."
         curl -LsSf https://astral.sh/uv/install.sh | sh
-        # Add uv's directory to the system PATH for this job
         echo "$HOME/.cargo/bin" >> $GITHUB_PATH
-        # Verify uv installation
+        echo "Verifying uv installation:"
         uv --version
 
-    # Step 5: Install Python dependencies using uv and the explicit requirements file path
+    # Step 5: Install Dependencies
     - name: Install Python dependencies using uv
       run: |
         echo "Attempting to install dependencies from ${{ github.workspace }}/requirements.txt ..."
         uv pip install -r ${{ github.workspace }}/requirements.txt
         echo "Dependency installation step finished."
 
-    # Step 6: Test that required libraries can be imported
+    # Step 6: Test Imports (Ensure Python block is correctly indented under pipe)
     - name: Test Required Imports
-      run: |
+      run: |  # <<< --- Make sure this pipe is here
         echo "Testing library imports..."
+        # vvv --- Start of Python Code Block (MUST be indented relative to 'run: |') --- vvv
         python3 -c "
 import sys
 print(f'Python version: {sys.version}')
@@ -72,19 +66,23 @@ print('\nChecking imports:')
 for lib_path in libs_to_test:
     try:
         parts = lib_path.split('.')
-        module_name = parts[0] # The actual package name to import first
+        module_name = parts[0]
 
-        if module_name == 'vaderSentiment': # Special case for vader
+        if module_name == 'vaderSentiment':
             from vaderSentiment.vaderSentiment import SentimentIntensityAnalyzer
             print(f'✓ Successfully imported: {lib_path}')
+        elif module_name == 'bs4':
+            # Importing bs4 implicitly imports BeautifulSoup
+            from bs4 import BeautifulSoup
+            print(f'✓ Successfully imported: {lib_path}')
         else:
-            __import__(module_name) # Import the base package
+            __import__(module_name)
             print(f'✓ Successfully imported: {module_name}')
 
     except ImportError as e:
         print(f'✗ ERROR importing {lib_path}: {e}')
         errors_found += 1
-    except Exception as e_gen: # Catch other potential errors during import test
+    except Exception as e_gen:
         print(f'✗ UNEXPECTED ERROR testing import {lib_path}: {e_gen}')
         errors_found += 1
 
@@ -93,16 +91,15 @@ if errors_found > 0:
     sys.exit(1) # Fail the step if imports failed
 else:
     print('\nAll critical library imports successful.')
-"
+" # <<< --- End of Python Code Block (Make sure quotes close correctly) --- <<<
 
-    # Step 7: (Optional but harmless) Set executable permissions for Python scripts
+    # Step 7: Set executable permissions (Optional)
     - name: Set executable permissions
-      # While generally not needed when calling with python3, it ensures permissions aren't an issue
       run: |
         chmod +x ${{ github.workspace }}/*.py || echo "No .py files found or chmod failed (might be ok)."
         echo "Executable permissions checked/set."
 
-    # Step 8: Debug check to see if secrets are being recognized by Actions
+    # Step 8: Debug Secrets Check
     - name: Debug Environment Variables (Secrets Check)
       run: |
         echo "Checking availability of secrets..."
@@ -114,9 +111,8 @@ else:
         echo "TWITTER_BEARER_TOKEN: ${{ secrets.TWITTER_BEARER_TOKEN != '' && 'SET' || 'NOT SET' }}"
         echo "WEB3_CAREER_API_KEY: ${{ secrets.WEB3_CAREER_API_KEY != '' && 'SET' || 'NOT SET' }}"
 
-    # Step 9: Run the master Python script that orchestrates all tasks
+    # Step 9: Run the master task script
     - name: Run Data Collection Tasks (Master Script)
-      # Pass secrets as environment variables
       env:
         POSTGRES_URI: ${{ secrets.POSTGRES_URI }}
         MONGO_URI: ${{ secrets.MONGO_URI }}
@@ -125,6 +121,8 @@ else:
         REDDIT_USER_AGENT: ${{ secrets.REDDIT_USER_AGENT }}
         TWITTER_BEARER_TOKEN: ${{ secrets.TWITTER_BEARER_TOKEN }}
         WEB3_CAREER_API_KEY: ${{ secrets.WEB3_CAREER_API_KEY }}
-      # Run the script using python3 and the explicit path
       run: |
         echo "Executing master Python script: python3 ${{ github.workspace }}/run_all_tasks.py"
+        # Make sure python3 is used, matching the command used for testing imports
+        python3 ${{ github.workspace }}/run_all_tasks.py
+        echo "Master script execution finished."
